# AoC-2022

./: Cargo.toml  README.md  build.rs
aoc_util/src/: lib.rs
dummy_day_lib/: Cargo.toml
dummy_day_lib/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
solves/: Cargo.toml  build.rs
solves/src/: lib.rs
solves/src/code/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
solves/src/input/: day15.txt  day19.txt  day5.txt  day7.txt
src/: main.rs
src/code/: day1.rs  day2.rs  day3.rs
