[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
day-override = ["solves/day-override"]
part-two = ["solves/part-two"]


[dependencies]
aoc_util = {path = "../aoc_util" }
solves = {path = "../solves"}
