[package]
name = "solves"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_util = {path = "../aoc_util"}
itertools = "0.10.1"
priority-queue = "1.3.0"
graph = "0.3.0"
nom = "7.1.1"
dummy_day_lib = {path = "../dummy_day_lib"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
day-override = []
part-two = []
dummy-feature = []

[build-dependencies]
chrono = "0.4.22"